Fixed hamburger menu and bottom text alignment

--- a/src/App.css
+++ b/src/App.css
@@ -2,195 +2,155 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-a:link{
-	color: black;
+a:link {
+  color: black;
 }
 
 p {
-    text-align: justify;
-    letter-spacing: 0.6px;
+  text-align: justify;
+  letter-spacing: 0.6px;
 }
 
 .bg {
-    background-image:url("./images/Taipei.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
+  background-image: url("./images/Taipei.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .bg1 {
-    background-color: #a4adb9;
+  background-color: #a4adb9;
 }
 
 .bg2 {
-    background-color: #f5f5f5;
-}
-
-.btn {
-    margin-top: 10px;
-    padding: 0px 16px 0px 16px ;
+  background-color: #f5f5f5;
 }
 
 .container {
-	padding-top: 10px;
-    padding-bottom: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .dropdown-menu {
-    min-width: 40px;
-    background-color: black;
-    z-index: 25000 !important;
+  min-width: 40px;
+  background-color: black;
+  z-index: 25000 !important;
 }
 
 #dropdownMenu:not(:hover) {
-    background-color: black;
-    color: white;
+  background-color: black;
+  color: white;
 }
 
-.dropdown-item{
-    padding: 5px;
-    display: block;
+.dropdown-item {
+  padding: 5px;
+  display: block;
 }
 
-.dropdown-item:hover{
-    background-color: #333;
+.dropdown-item:hover {
+  background-color: #333;
 }
 
 .img-circle {
-    padding-top: 10px;
-    padding-bottom: 30px;
+  padding-top: 10px;
+  padding-bottom: 30px;
 }
 
 .overlay {
-	background-color: rgba(0,0,0,0.6);
-	z-index:1;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 1;
 }
 
 .progress {
-    height: 8px;
-    margin-bottom: 10px;
+  max-height: 8px;
+  margin-bottom: 10px;
 }
 
 .progress-bar-success {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(230,230,230,1)),to(rgba(255,230,20,0.6)), color-stop(0,rgba(255,255,255,0)));
+  background-image: -webkit-gradient(linear, left top, right top, from(rgb(80, 240, 0)), to(rgba(55, 240, 40, 0.6)), color-stop(0, rgba(255, 255, 255, 0)));
 }
 
 .navbar-custom {
-    z-index: 1;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-    margin-bottom: 0;
-    border-radius: 0;
-    background-color:black;
+  z-index: 1;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  margin-bottom: 0;
+  border-radius: 0;
+  background-color: black;
 }
 
-.navbar-nav > li {
-    display: inline-block;
+.navbar-nav>li {
+  display: inline-block;
 }
 
-.navbar-nav .open .dropdown-menu{
-    position: absolute;
-    background-color: black;
+.navbar-nav .open .dropdown-menu {
+  position: absolute;
+  background-color: black;
 }
 
 .navbar-custom .navbar-toggle {
-    background-color: #333;
+  background-color: #333;
 }
 
 .navbar-custom .navbar-brand {
-    color: #ffffff;
+  color: #ffffff;
 }
 
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus {
-    color: #333;
+  color: #333;
 }
 
-.navbar-custom .navbar-nav > li > a {
-    color: #fff;
+.navbar-custom .navbar-nav>li>a {
+  color: #fff;
 }
 
-.navbar-custom .navbar-nav > li > a:hover,
-.navbar-custom .navbar-nav > li > a:focus {
-    color: #333;
+.navbar-custom .navbar-nav>li>a:hover,
+.navbar-custom .navbar-nav>li>a:focus {
+  color: #333;
 }
 
-.navbar-custom .navbar-nav > .active > a, 
-.navbar-custom .navbar-nav > .active > a:hover, 
-.navbar-custom .navbar-nav > .active > a:focus {
-    color: #333;
-    background-color: #333;
+.navbar-custom .navbar-nav>.active>a,
+.navbar-custom .navbar-nav>.active>a:hover,
+.navbar-custom .navbar-nav>.active>a:focus {
+  color: #333;
+  background-color: #333;
 }
 
-.navbar-custom .navbar-nav > .open > a, 
-.navbar-custom .navbar-nav > .open > a:hover, 
-.navbar-custom .navbar-nav > .open > a:focus {
-    color: #ffffff;
-    background-color: #333;
+.navbar-custom .navbar-nav>.open>a,
+.navbar-custom .navbar-nav>.open>a:hover,
+.navbar-custom .navbar-nav>.open>a:focus {
+  color: #ffffff;
+  background-color: #333;
 }
 
-.navbar-custom .navbar-nav > .dropdown > a .caret {
-    border-top-color: #333;
-    border-bottom-color: #333;
+.navbar-custom .navbar-nav>.dropdown>a .caret {
+  border-top-color: #333;
+  border-bottom-color: #333;
 }
 
-.navbar-custom .navbar-nav > .dropdown > a:hover .caret,
-.navbar-custom .navbar-nav > .dropdown > a:focus .caret {
-    border-top-color: #333;
-    border-bottom-color: #333;
+.navbar-custom .navbar-nav>.dropdown>a:hover .caret,
+.navbar-custom .navbar-nav>.dropdown>a:focus .caret {
+  border-top-color: #333;
+  border-bottom-color: #333;
 }
 
-.navbar-custom .navbar-nav > .open > a .caret, 
-.navbar-custom .navbar-nav > .open > a:hover .caret, 
-.navbar-custom .navbar-nav > .open > a:focus .caret {
-    border-top-color: #333;
-    border-bottom-color: #333;
+.navbar-custom .navbar-nav>.open>a .caret,
+.navbar-custom .navbar-nav>.open>a:hover .caret,
+.navbar-custom .navbar-nav>.open>a:focus .caret {
+  border-top-color: #333;
+  border-bottom-color: #333;
 }
 
 .navbar-custom .navbar-toggle {
-    border-color: #333;
+  border-color: #333;
 }
 
 .navbar-custom .navbar-toggle:hover,
 .navbar-custom .navbar-toggle:focus {
-    background-color: #333;
+  background-color: #333;
 }
 
 .navbar-custom .navbar-toggle .icon-bar {
-    background-color: #ffffff;
+  background-color: #ffffff;
 }
